# todo-app-example3

./: .env.example  .gitignore  README.md  compose.yaml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  db.py  deps.py  main.py  models.py  schemas.py  security.py
backend/app/routers/: auth.py  todos.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 2a3cf6848388_add_user_id_to_todos.py  b216a80d73fd_create_users_and_sessions_tables.py  bba428a98c05_create_todos_table.py  be1c61339c9f_drop_sessions_table.py
backend/scripts/: seed.py
backend/tests/: conftest.py  test_auth.py  test_cors.py  test_models.py  test_security.py  test_todos_authz.py  test_todos_create.py  test_todos_delete.py  test_todos_detail.py  test_todos_list.py  test_todos_update.py
docs/: initial-prompt.md
docs/00_project/: catch-up.md  concepts.md  dev-walkthrough.md  exercises.md  product-backlog.md  qa-log.md  roadmap.md  user-stories.md
docs/01_sprint1/: backlog.md  retrospective.md  review.md
docs/02_sprint2/: backlog.md  retrospective.md  review.md
docs/03_sprint3/: backlog.md  retrospective.md  review.md
docs/04_sprint4/: backlog.md  retrospective.md  review.md
docs/05_sprint5/: backlog.md  retrospective.md  review.md
docs/06_sprint6/: backlog.md  retrospective.md  review.md
docs/07_sprint7/: backlog.md  retrospective.md  review.md
docs/08_sprint8/: backlog.md  retrospective.md  review.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
(+43 files in other folders)
