[project]
name = "todo-backend"
version = "0.1.0"
description = "TODO アプリのバックエンド API（FastAPI）"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "bcrypt>=5.0.0",
    "fastapi>=0.139.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.13.4",
    "sqlmodel>=0.0.39",
    "uvicorn[standard]>=0.50.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# backend/ 直下を import パスに入れ、テストから `from app.main import app` できるようにする
pythonpath = ["."]
